Fixed the container to have overflow-y: auto instead of hidden for videos

--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -169,19 +169,19 @@
     flex: 1;
     background-color: #000;
     display: flex;
-    justify-content: center;
-    align-items: center;
     position: relative;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 #lightbox-media-container {
     width: 100%;
-    height: 100%;
+    margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 20px;
+    min-height: 100%;
 }
 
 #lightbox-media-container>div,
